docs/tests/parser/expressions/valid/ExprPostfixOps.src
fn void test() {
    let int x = 5;
    x++;
    x--;
    let int y = x++;
    let int z = x--;
}
