docs/tests/parser/expressions/invalid/ExprUnmatchedParen.src
fn void test() {
    let int x = (1 + (2 + 3);
}
